[package]
name = "ublocks-ascii-art"
version = "0.1.0"
authors = ["NyxCode <moritz.bischof1@gmail.com>"]
edition = "2018"

[features]
default = ["font-badscript"]

font-badscript = []
font-roboto = []
font-roboto-mono = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"
rusttype = "0.7.7"

[lib]
name = "ublocks_ascii_art"
path = "src/lib.rs"

[[bin]]
name = "ublocks_ascii_art"
path = "src/bin.rs"